[package]
name = "tape"
version = "0.2.0"
edition = "2021"
default-run="tape"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dynasm = "3.0.1"
dynasmrt = "3.0.1"
# libc = "0.2.153"
